@@ -24,7 +24,24 @@
 		<module>SolarPaper-Server</module>
 		<module>SolarPaper-API</module>
 		<module>SolarPaper-PostServer</module>
+		<module>SolarPaper-Assistant</module>
 	</modules>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>15</source>
+						<target>15</target>
+						<compilerArgs>--enable-preview</compilerArgs>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
 	<dependencyManagement>
 		<dependencies>
